# QuackGame

./: .gitignore  CMakeLists.txt  MakeFile  Makefile  README.md  dimensions.yaml  install.sh  map.yaml
client/: CMakeLists.txt  main.cpp
client/controller/: CMakeLists.txt  game.cpp  game.h  launcher.cpp  launcher.h
client/controller/cheats/: CMakeLists.txt  cheatstorage.h
client/controller/command/: CMakeLists.txt  command.h  drop.cpp  gamecontext.cpp  gamecontext.h  grab.cpp  inputhandler.cpp  inputhandler.h  jump.cpp  jump.h  lookingup.cpp  lookingup.h  movebentdown.cpp  movebentdown.h  movebentdowncommand.cpp  movebentdowncommand.h  moveleft.cpp  moveleft.h  moveleftcommand.cpp  moveleftcommand.h  moveright.cpp  moveright.h  moverightcommand.cpp  moverightcommand.h  shoot.cpp  shoot.h
client/controller/lobby/: CMakeLists.txt  lobby.cpp  lobby.h  main_window.cpp  main_window.h
client/controller/music/: CMakeLists.txt  chunk.cpp  chunk.h  explosionsound.cpp  explosionsound.h  gamemusic.cpp  gamemusic.h  musicbox.cpp  musicbox.h  musicboxstorage.cpp  musicboxstorage.h  pathmusic.h  projectilesound.cpp  projectilesound.h  soundmanager.cpp  soundmanager.h
client/controller/render/: CMakeLists.txt  armor.h  boxitem.cpp  boxitem.h  duck.cpp  duck.h  explosiondrawer.cpp  explosiondrawer.h  item.cpp  item.h  mapdrawer.cpp  mapdrawer.h  projectiledrawer.cpp  projectiledrawer.h  renderer.cpp  renderer.h  renderstorage.cpp  renderstorage.h  scene.cpp  scene.h  textureloader.cpp  textureloader.h  transitionmanager.cpp  transitionmanager.h
client/controller/render/size/: CMakeLists.txt
client/controller/render/size/gun/: CMakeLists.txt  gunsizefactory.cpp  gunsizefactory.h  sizedefsguns.h
client/controller/render/size/projectile/: CMakeLists.txt  projectilesizefactory.cpp  projectilesizefactory.h  sizedefsprojectiles.h
client/controller/round/: CMakeLists.txt  roundcontroller.cpp  roundcontroller.h
client/controller/session/: CMakeLists.txt  cheatstorage.cpp  sessioncontroller.cpp  sessioncontroller.h
client/controller/sound/: CMakeLists.txt  chunk.cpp  chunk.h  explosionsound.cpp  explosionsound.h  musicboxstorage.cpp  projectilelasersound.cpp  projectilelasersound.h  projectilesound.cpp  projectilesound.h  soundbox.cpp  soundbox.h  soundboxstorage.cpp  soundboxstorage.h  soundmanager.cpp  soundmanager.h
client/model/: CMakeLists.txt  network.cpp  network.h  protocol.cpp  protocol.h  receiver.cpp  receiver.h  sender.cpp  sender.h
client/model/lobby/: CMakeLists.txt  lobby.cpp  lobby.h
client/model/resource/: CMakeLists.txt  path.h  texture.cpp  texture.h  texturefactory.cpp  (+2 more)
client/view/: CMakeLists.txt  SDLInitializer.cpp  SDLInitializer.h  SDLWindow.cpp  SDLWindow.h  create_room.cpp  create_room.h  create_room.ui  game_list.cpp  game_list.h  game_list.ui  game_mode.cpp  game_mode.h  game_mode.ui  game_result_window.cpp  game_result_window.h  game_result_window.ui  loading_screen.h  lobby.cpp  lobby.h  main_window.cpp  main_window.h  main_window.ui  main_window_ui.h  sound_player.h  start_game.cpp  start_game.h  start_game.ui  table_screen.h  window_utils.h
common/: CMakeLists.txt  actions.h  armor.h  client_actions.h  client_command.h  client_command_type.h  clientidaction.h  color.cpp  color.h  common_client_command.h  common_defs.h  common_server_message.h  config.h  constant_rate_loop.cpp  constant_rate_loop.h  defs.h  direction.h  duck.h  duck_actions.h  duck_dto.h  game_dto.h  gun_dto.h  gun_type.h  liberror.cpp  lobby_messages.h  map.h  map_dto.h  position.h  projectiledirection.h  projectiletype.h  reward_id.h  server_message.h  size.h  snapshots.h  soundtype.h  texturefigure.h  texturesize.h  tiles.h  userlobbyinfo.h  usertable.h
config/: client.yaml  server.yaml
editor/: CMakeLists.txt  buttons.h  editor.cpp  editor.h  grid.h  main.cpp  save_button.h  tiles.h  tileset.h
server/: CMakeLists.txt  acceptor.cpp  acceptor.h  client_command.h  game.cpp  game.h  gameloop.cpp  gameloop.h  games_manager.cpp  games_manager.h  item.h  lobby_session.cpp  lobby_session.h  main.cpp  map.h  monitor_games.cpp  monitor_games.h  protocol.cpp  protocol.h  receiver.cpp  receiver.h  reward.h  sender.cpp  sender.h  server.cpp  server.h  session.cpp  session.h  sessions_handler.cpp  sessions_handler.h
server/game/: CMakeLists.txt  camera.h  duck.cpp  duck.h  game.cpp  game.h  gun.h  gun_spawn.h  hitbox.cpp  hitbox.h  map.cpp  map.h  projectile.h  shoot_event.h
server/game/color/: CMakeLists.txt  colorfactory.cpp  colorfactory.h  colorstorage.cpp  colorstorage.h
server/game/duck/: CMakeLists.txt  defs.h  duck.cpp  duck.h  guncontroller.cpp  guncontroller.h  movecontroller.cpp  movecontroller.h
server/game/explosion/: CMakeLists.txt  explosion.h
server/game/gun/: CMakeLists.txt  ak.cpp  ak.h  banana.cpp  banana.h  cowboypistol.cpp  cowboypistol.h  cowboyweapon.cpp  cowboyweapon.h  defminvalue.h  dispersion.h  duelingpistol.cpp  duelingpistol.h  explosion.h  grenade.cpp  grenade.h  grenadeprojectile.h  gun.h  gunammo.h  laserrifle.cpp  laserrifle.h  magnum.cpp  magnum.h  moveback.h  pewpewlaser.cpp  pewpewlaser.h  positiongun.cpp  positiongun.h  projectile.h  shotgun.cpp  shotgun.h  sniper.cpp  sniper.h
server/game/gun/dispersion/: CMakeLists.txt  dispersion.h  dispersiongrenade.cpp  dispersiongrenade.h  dispersionhigh.cpp  dispersionhigh.h  dispersionlaser.cpp  dispersionlaser.h  dispersionlow.cpp  dispersionlow.h  dispersionmedium.cpp  dispersionmedium.h
server/game/gun/projectile/: CMakeLists.txt  projectile.h  projectilebanana.cpp  projectilebanana.h  projectilegrenade.cpp  projectilegrenade.h  projectilegun.cpp  projectilegun.h  projectilelaser.cpp  projectilelaser.h
server/game/manager/: CMakeLists.txt  explosionmanager.cpp  explosionmanager.h  projectilemanager.cpp  projectilemanager.h
server/game/maps/: map_00.yaml  map_01.yaml  map_02.yaml  map_03.yaml  map_04.yaml  map_05.yaml
tests/: CMakeLists.txt  foo.cpp  testProtocolServer.cpp
tests/mock/: CMakeLists.txt  mock_socket.h
ui/: CMakeLists.txt  defs.h  tiles.h  tileset.h
(+33 files in other folders)
